--- a/Home/index.html
+++ b/Home/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>E COMMERCE</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -47,11 +47,8 @@
   </nav>
 
 
-  <div class=" bg_img">
-    <!-- <div class="col-sm-12 col-md-6 col-lg-8">        
-
-      </div> -->
-    <!-- <div class="col-sm-12 col-md-6 col-lg-4"> -->
+  <div class=" bg_img">      
+ 
     <div class="d-flex justify-content-end align-items-end h-100">
       <div class="cart1">
         <p style="font-size: 13px;">New Arrival</p>
