--- a/raj/raj.html
+++ b/raj/raj.html
@@ -201,9 +201,9 @@
         </div>
       </div>
       <hr>
-      <div class="container">
+      <div class="container d-flex justify-content-between">
         <p>2023 furino. All rights reverved</p>
-        <p></p>
+        <b>Rahul Yadav</b>
       </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
