--- a/Home/index.html
+++ b/Home/index.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
         <form class="d-flex gap-4" role="search">
-          <i class="fa-regular fa-user"></i>
+          <i class="fa-regular fa-user" id="userinput"></i>
           <i class="fa-solid fa-magnifying-glass"></i>
           <i class="fa-regular fa-heart"></i>
           <i class="fa-solid fa-bars"></i>
@@ -47,8 +47,8 @@
   </nav>
 
 
-  <div class=" bg_img">      
- 
+  <div class=" bg_img">
+
     <div class="d-flex justify-content-end align-items-end h-100">
       <div class="cart1">
         <p style="font-size: 13px;">New Arrival</p>
