--- a/Product/Product.html
+++ b/Product/Product.html
@@ -91,11 +91,22 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
-                <div>
+                <!-- <div>
                     <h3>Add A Product</h3>
                     <button class="btn btn-danger"
                         style="background-color: rgb(145, 93, 22); border: 2px solid rgb(145, 90, 22);">Choose a Product
                         <i class="fa-solid fa-chevron-down ms-4"></i></button>
+                </div> -->
+
+                <div>
+                    <h3>Add A Product</h3>
+                    <div class="dropdown-wrapper">
+                        <select class="dropdown-chevron" style="background-color: rgb(168, 116, 44); border: 2px solid rgb(145, 90, 22); width: 30vh; height: 5vh;">
+                            <option>Option 1</option>
+                            <option>Option 2</option>
+                            <option>Option 3</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
