--- a/Home/index.html
+++ b/Home/index.html
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
+  <div id="loading-state" class="loading" >
+    <div class="spinner-border"   role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+   <nav class="navbar navbar-expand-lg">
     <div class="container">
       <img class="imgg" src="./images/Frame 168.png" alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -100,158 +105,116 @@
 
 
   <div class="container">
-    <div class="row mt-5">
-      <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
-        <div class="position-relative overflow-hidden hoverclass">
-          <div class="position-relative">
-            <img width="100%" src="./images/Images.png" alt="">
-            <div class="raj">30%</div>
+    <div class="row mt-5 "  id="loder-row">
+      <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
+        <div class="card" aria-hidden="true">
+          <div class=" placeholder placeholder-glow col-12" style="height: 300px;" ></div>
+          <div class="card-body">
+            <h5 class="card-title placeholder-glow d-flex " style="flex-direction: column; gap: 0.5rem;" >
+              <span class="placeholder col-5"></span>
+              <span class="placeholder col-4"></span>
+              <span class="placeholder col-6"></span>
+            </h5>
           </div>
-          <div style="background-color: #be894316; padding: 5px;">
-            <p><b>Syltherine</b></p>
-            <p>Stylish cafe chair</p>
-            <div class="d-flex gap-2">
-              <p>Rp 2.500.000</p>
-              <p class="opacity-50">Rp 3.500.000</p>
-            </div>
-            <div class="blurr1">
-              <div style="display: flex; justify-content: end; align-items: end; height: 40vh;">
-                <div class="backk1">
-                  <button class="blackbtn1">Add to cart</button>
-                  <div class="d-flex gap-4 me-4 mt-3">
-                    <div class="d-flex gap-1 text-light">
-                      <i class="fa-solid fa-share-nodes fa-shake mt-1"></i>
-                      <p>Share</p>
-                    </div>
-                    <div class="d-flex gap-1 text-light">
-                      <i class="fa-solid fa-right-left mt-1"></i>
-                      <p>Compare</p>
-                    </div>
-                    <div class="d-flex gap-1 text-light">
-                      <i class="fa-regular fa-heart mt-1"></i>
-                      <p>Like</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+
         </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
+        <div class="card" aria-hidden="true">
+          <div class=" placeholder placeholder-glow col-12" style="height: 300px;" ></div>
+          <div class="card-body">
+            <h5 class="card-title placeholder-glow d-flex " style="flex-direction: column; gap: 0.5rem;" >
+              <span class="placeholder col-5"></span>
+              <span class="placeholder col-4"></span>
+              <span class="placeholder col-6"></span>
+            </h5>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
+        <div class="card" aria-hidden="true">
+          <div class=" placeholder placeholder-glow col-12" style="height: 300px;" ></div>
+          <div class="card-body">
+            <h5 class="card-title placeholder-glow d-flex " style="flex-direction: column; gap: 0.5rem;" >
+              <span class="placeholder col-5"></span>
+              <span class="placeholder col-4"></span>
+              <span class="placeholder col-6"></span>
+            </h5>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
+        <div class="card" aria-hidden="true">
+          <div class=" placeholder placeholder-glow col-12" style="height: 300px;" ></div>
+          <div class="card-body">
+            <h5 class="card-title placeholder-glow d-flex " style="flex-direction: column; gap: 0.5rem;" >
+              <span class="placeholder col-5"></span>
+              <span class="placeholder col-4"></span>
+              <span class="placeholder col-6"></span>
+            </h5>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
+        <div class="card" aria-hidden="true">
+          <div class=" placeholder placeholder-glow col-12" style="height: 300px;" ></div>
+          <div class="card-body">
+            <h5 class="card-title placeholder-glow d-flex " style="flex-direction: column; gap: 0.5rem;" >
+              <span class="placeholder col-5"></span>
+              <span class="placeholder col-4"></span>
+              <span class="placeholder col-6"></span>
+            </h5>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
+        <div class="card" aria-hidden="true">
+          <div class=" placeholder placeholder-glow col-12" style="height: 300px;" ></div>
+          <div class="card-body">
+            <h5 class="card-title placeholder-glow d-flex " style="flex-direction: column; gap: 0.5rem;" >
+              <span class="placeholder col-5"></span>
+              <span class="placeholder col-4"></span>
+              <span class="placeholder col-6"></span>
+            </h5>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
+        <div class="card" aria-hidden="true">
+          <div class=" placeholder placeholder-glow col-12" style="height: 300px;" ></div>
+          <div class="card-body">
+            <h5 class="card-title placeholder-glow d-flex " style="flex-direction: column; gap: 0.5rem;" >
+              <span class="placeholder col-5"></span>
+              <span class="placeholder col-4"></span>
+              <span class="placeholder col-6"></span>
+            </h5>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3 mt-3">
+        <div class="card" aria-hidden="true">
+          <div class=" placeholder placeholder-glow col-12" style="height: 300px;" ></div>
+          <div class="card-body">
+            <h5 class="card-title placeholder-glow d-flex " style="flex-direction: column; gap: 0.5rem;" >
+              <span class="placeholder col-5"></span>
+              <span class="placeholder col-4"></span>
+              <span class="placeholder col-6"></span>
+            </h5>
+          </div>
+
+        </div>
+      </div>
+      </div>
       </div>
 
 
-      <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
-        <div class="position-relative overflow-hidden hoverclass">
-          <div>
-            <img width="100%" src="./images/Images (3).png" alt="">
-            <div style="background-color: #be894316; padding: 5px;">
-              <p><b>Syltherine</b></p>
-              <p>Stylish cafe chair</p>
-              <p>Rp 2.500.000</p>
-            </div>
-          </div>
-          <div class="blurr1">
-            <div style="display: flex; justify-content: end; align-items: end; height: 40vh;">
-              <div class="backk1">
-                <button class="blackbtn1">Add to cart</button>
-                <div class="d-flex gap-4 me-4 mt-3">
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-solid fa-share-nodes fa-shake mt-1"></i>
-                    <p>Share</p>
-                  </div>
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-solid fa-right-left mt-1"></i>
-                    <p>Compare</p>
-                  </div>
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-regular fa-heart mt-1"></i>
-                    <p>Like</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
-        <div class="position-relative overflow-hidden hoverclass">
-          <div class="position-relative">
-            <img width="100%" src="./images/Images (1).png" alt="">
-            <div class="raj">-50%</div>
-          </div>
-          <div style="background-color: #be894316; padding: 5px;">
-            <p><b>Lolito</b></p>
-            <p>Luxury big sofa</p>
-            <div class="d-flex gap-2">
-              <p>Rp 7.000.000</p>
-              <p class="opacity-50">Rp 14.000.000</p>
-            </div>
-          </div>
-          <div class="blurr1">
-            <div style="display: flex; justify-content: end; align-items: end; height: 40vh;">
-              <div class="backk1">
-                <button class="blackbtn1">Add to cart</button>
-                <div class="d-flex gap-4 me-4 mt-3">
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-solid fa-share-nodes fa-shake mt-1"></i>
-                    <p>Share</p>
-                  </div>
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-solid fa-right-left mt-1"></i>
-                    <p>Compare</p>
-                  </div>
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-regular fa-heart mt-1"></i>
-                    <p>Like</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
-        <div class="position-relative overflow-hidden hoverclass">
-          <div class="position-relative">
-            <img width="100%" src="./images/Images (2).png" alt="">
-            <div class="rajj">new</div>
-          </div>
-          <div style="background-color: #be894316; padding: 5px;">
-            <p><b>Respira</b></p>
-            <p>Outdoor bar table and stool</p>
-            <p>Rp 500.000</p>
-          </div>
-          <div class="blurr1">
-            <div style="display: flex; justify-content: end; align-items: end; height: 40vh;">
-              <div class="backk1">
-                <button class="blackbtn1">Add to cart</button>
-                <div class="d-flex gap-4 me-4 mt-3">
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-solid fa-share-nodes fa-shake mt-1"></i>
-                    <p>Share</p>
-                  </div>
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-solid fa-right-left mt-1"></i>
-                    <p>Compare</p>
-                  </div>
-                  <div class="d-flex gap-1 text-light">
-                    <i class="fa-regular fa-heart mt-1"></i>
-                    <p>Like</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container">
+  <!-- <div class="container">
     <div class="row mt-5">
       <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
         <div class="position-relative overflow-hidden hoverclass">
@@ -399,7 +362,7 @@
         <button class="blackbtn1 mx-auto">Show More</button>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="container">
     <div class="row mt-5 hiwhy" style="background-color: #FCF8F3;">
@@ -522,5 +485,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
 
 </html>
