--- a/SHOP/shop.html
+++ b/SHOP/shop.html
@@ -81,7 +81,7 @@
 
 
   <div class="container">
-    <div class="row mt-5">
+    <div class="row mt-5" id="loder-row">
       <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
         <div class="position-relative overflow-hidden hoverclass">
           <div class="position-relative">
