mistake this code

--- a/SHOP/shop.html
+++ b/SHOP/shop.html
@@ -230,6 +230,7 @@
       </div>
     </div>
   </div>
+
   <div class="container">
     <div class="row mt-5">
       <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
@@ -380,6 +381,9 @@
       </div>
     </div>
   </div>
+
+
+
   <div class="container">
     <div class="row mt-5">
       <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
@@ -710,7 +714,7 @@
       </div>
       <div class="col-sm-12 col-md-6 col-lg-3 mt-5">
         <div>
-          <div class="d-flex gap-2" style="width: 100%;"> 
+          <div class="d-flex gap-2" style="width: 100%;">
             <i class="fa-solid fa-cart-flatbed fs-1"></i>
             <div>
               <h5 class="mb-0">Free Shipping</h5>
@@ -774,7 +778,7 @@
   <div class="container">
     <p>2023 furino. All rights reverved</p>
   </div>
-
+<script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
