--- a/Navbar.html
+++ b/Navbar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
     <div class="logo">
@@ -15,6 +16,9 @@
         <p>Contect</p>
         <p>Another</p>
         <p>Help</p>
+    </div>
+    <div class="menu-icon">
+        
     </div>
 </body>
 </html>
