--- a/Navbar.html
+++ b/Navbar.html
@@ -4,23 +4,57 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        } 
+        .all{
+            display: flex;
+            justify-content: space-between;
+            background-color: rgb(67, 126, 235);
+        }
+        .logos{
+            display: flex;
+            gap: 20px;
+            font-size: 20px;
+        }
+        .menu-icon{
+            font-size: 1.6rem;
+            
+        }
+        
+        @media (max-width:600px) {
+            .logos{
+                position: absolute;
+                top: 60px;
+                left: 0px;
+                right: 0px;
+                flex-direction: column;
+                text-align: center;
+                background-color:rgb(67, 126, 235) ;
+            }
+        }
+    </style>
   </head>
   <body>
-    <div class="logo">
-        <h2>Logo</h2>
-    </div>
-    <div>
-        <p>Home</p>
-        <p>About</p>
-        <p>Contect</p>
-        <p>Another</p>
-        <p>Help</p>
-    </div>
-    <div class="menu-icon">
-        <i class="fa-solid fa-bars"></i>
+    <div class="all">
+        <div class="logo">
+            <h2>Logo</h2>
+        </div>
+        <div class="logos">
+            <p>Home</p>
+            <p>About</p>
+            <p>Contect</p>
+            <p>Another</p>
+            <p>Help</p>
+        </div>
+        <div class="menu-icon">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
