--- a/Navbar.html
+++ b/Navbar.html
@@ -23,11 +23,12 @@
         .logos {
             display: flex;
             gap: 20px;
-            font-size: 18px;
+            font-size: 20px;
         }
         .menu-icon {
             font-size: 1.6rem;
             cursor: pointer;
+            display: none;
         }
         @media (max-width: 600px) {
             .logos {
@@ -45,8 +46,6 @@
                 display: block;
             }
         }
-
-         
     </style>
 </head>
 <body>
@@ -54,37 +53,30 @@
         <div class="logo">
             <h2>Logo</h2>
         </div>
-        <div class="logos" id="logos">
+        <div class="logos" id="logos_value">
             <p>Home</p>
             <p>About</p>
             <p>Contact</p>
             <p>Another</p>
             <p>Help</p>
         </div>
-        <div class="menu-icon" onclick="toggleMenu()">
+        <div class="menu-icon" onclick="Menu_nav()">
             <i class="fa-solid fa-bars"></i>
         </div>
     </div>
 
     <script>
-       /* function toggleMenu() {
-            let menu = document.getElementById("logos");
+        function Menu_nav() {
+            let menu = document.getElementById("logos_value");
             if (menu.style.display === "flex") {
                 menu.style.display = "none";
             } else {
                 menu.style.display = "flex";
             }
-        }*/
-
-        let menu = document.getElementById("logos")
-        menu.style.maxHeight = "0px"
-
-        function Navbar(){
-            if(menu.style.maxHeight = "0px"){
-            }else{
-                menu.style.maxHeight = "0px"
-            }
         }
+
+
+        
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
