--- a/Navbar.html
+++ b/Navbar.html
@@ -1,17 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Navbar</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         * {
             padding: 0;
             margin: 0;
             box-sizing: border-box;
         }
+
         .all {
             display: flex;
             justify-content: space-between;
@@ -20,16 +25,19 @@
             background-color: rgb(67, 126, 235);
             color: white;
         }
+
         .logos {
             display: flex;
             gap: 20px;
             font-size: 20px;
         }
+
         .menu-icon {
             font-size: 1.6rem;
             cursor: pointer;
             display: none;
         }
+
         @media (max-width: 600px) {
             .logos {
                 display: none;
@@ -42,12 +50,14 @@
                 background-color: rgb(67, 126, 235);
                 padding: 10px 0;
             }
+
             .menu-icon {
                 display: block;
             }
         }
     </style>
 </head>
+
 <body>
     <div class="all">
         <div class="logo">
@@ -76,9 +86,21 @@
         }
 
 
-        
+        /*let menu = document.getElementById("logos_value");
+        menu.style.maxHeight = "0px"
+        function menus() {
+            if(menu.style.maxHeight === "300px"){
+                menu.style.maxHeight = "0px"
+            }else{
+                menu.style.maxHeight = "0px"
+            }
+        }/*
+
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
