--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -113,7 +113,11 @@
                         <div class="op2"></div>
                     </div>
                     <div class="d-flex gap-3 flex11">
-                        <button class="btn mt-3" style="border: 1px solid black;"> - 1 + </button>
+                        <span>
+                            <button id="decrease" class="btn mt-3" style="border: 1px solid black;">-</button>
+                            <button id="plus1" class="btn mt-3" style="border: 1px solid black;">0</button>
+                            <button id="increase" class="btn mt-3" style="border: 1px solid black;">+</button>
+                        </span>
                         <button class="btn mt-3" style="border: 1px solid black;">Add To Cart</button>
                         <button class="btn mt-3" style="border: 1px solid black;">+ Compare</button>
                     </div>
@@ -431,7 +435,7 @@
             </div>
             <hr>
             <div> 
-                <button class="btn btn-dark rounded-4">Car t</button>
+                <button class="btn btn-dark rounded-4">Cart</button>
                 <button class="btn btn-dark rounded-4">Checkout</button>
                 <button class="btn btn-dark rounded-4">Comparison</button>
             </div>
@@ -439,6 +443,7 @@
     </div>
 </div>
 </body>
+<script src="./contact.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
