--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -40,10 +40,11 @@
                 <form class="d-flex gap-4" role="search">
                     <i class="fa-regular fa-user" style="font-size: 18px;"></i>
                     <i class="fa-solid fa-magnifying-glass" style="font-size: 18px;"></i>
-                    <i class="fa-regular fa-heart" style="font-size: 18px;"></i> <button class="border-0" style="background-color: transparent;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                    aria-controls="offcanvasRight">
-                    <p><i class="fa-solid fa-bars mb-0" style="font-size: 18px;"></i></p>
-                </button>
+                    <i class="fa-regular fa-heart" style="font-size: 18px;"></i> <button class="border-0"
+                        style="background-color: transparent;" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                        <p><i class="fa-solid fa-bars mb-0" style="font-size: 18px;"></i></p>
+                    </button>
                 </form>
 
             </div>
@@ -52,15 +53,15 @@
 
 
 
-    
+
     <div class="" style="background-color: #f9f1e7;">
         <div class="d-flex gap-2 container align-items-center">
-            <p class="mb-0" >Home</p>
+            <p class="mb-0">Home</p>
             <i class="fa-solid fa-chevron-right mt-1 mb-0"></i>
-            <p class="mb-0" >Shop</p>
+            <p class="mb-0">Shop</p>
             <i class="fa-solid fa-chevron-right mt-1 mb-0"></i>
             <p class="mb-0 mt-1">|</p>
-            <p class="mb-0" >Asgaard sofa</p>
+            <p class="mb-0">Asgaard sofa</p>
         </div>
     </div>
 
@@ -334,117 +335,118 @@
         </div>
     </div>
 
-<div class="d-flex justify-content-center mt-5 p-1">
-    <button class="btn" style="background-color: #95570c;">Show More</button>
-</div>
-
-
-
-
-<div class="container">
-    <div class="row mt-5">
-      <div class="col-sm-12 col-md-6 col-lg-3">
-        <div>
-          <h3>Funiro.</h3>
-          <p class="opacity-75" style="font-size: 16px;">400 University Drive Suite 200 Coral Gables,
-            FL 33134 USA</p>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-3">
-        <div>
-          <p class="opacity-50">Links</p><br>
-          <p>Home</p>
-          <p>Shop</p>
-          <p>About</p>
-          <p>Contact</p>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-3">
-        <div>
-          <p class="opacity-50">Help</p><br>
-          <p>Payment Options</p>
-          <p>Returns</p>
-          <p>Privacy Policies</p> 
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-3">
-        <p class="opacity-50">Newsletter</p><br>
-        <div class="d-flex gap-2 tyr">
-          <input type="Email" placeholder="Enter Your Email Address">
-          <b>SUBSCRIBE</b>
-        </div>
-      </div>
+    <div class="d-flex justify-content-center mt-5 p-1">
+        <button class="btn" style="background-color: #95570c;">Show More</button>
     </div>
-  </div>
-  <hr>
-  <div class="container">
-    <p>2023 furino. All rights reverved</p>
-  </div> 
 
 
 
-  <div class="offcanvas offcanvas-end h-75" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-    <div class="offcanvas-header">
-        <h3 class="offcanvas-title" id="offcanvasRightLabel">Shopping Cart</h3>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div>
+                    <h3>Funiro.</h3>
+                    <p class="opacity-75" style="font-size: 16px;">400 University Drive Suite 200 Coral Gables,
+                        FL 33134 USA</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div>
+                    <p class="opacity-50">Links</p><br>
+                    <p>Home</p>
+                    <p>Shop</p>
+                    <p>About</p>
+                    <p>Contact</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div>
+                    <p class="opacity-50">Help</p><br>
+                    <p>Payment Options</p>
+                    <p>Returns</p>
+                    <p>Privacy Policies</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <p class="opacity-50">Newsletter</p><br>
+                <div class="d-flex gap-2 tyr">
+                    <input type="Email" placeholder="Enter Your Email Address">
+                    <b>SUBSCRIBE</b>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="offcanvas-body">
-        <div>
-            <hr>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div>
-                            <img width="100%" src="images/Mask group (3).png" alt="">
+    <hr>
+    <div class="container">
+        <p>2023 furino. All rights reverved</p>
+    </div>
+
+
+
+    <div class="offcanvas offcanvas-end h-75" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+            <h3 class="offcanvas-title" id="offcanvasRightLabel">Shopping Cart</h3>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div>
+                <hr>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div>
+                                <img width="100%" src="images/Mask group (3).png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-8">
+                            <div class="d-flex justify-content-between">
+                                <div class="mt-3">
+                                    <h4>Asgaard sofa</h4>
+                                    <p>1 X <span style="color: #e1d8cd;">Rs. 250,000.00</span></p>
+                                </div>
+                                <div>
+                                    <i class="fa-solid fa-x mt-4"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-8">
-                        <div class="d-flex justify-content-between">
-                            <div class="mt-3">
-                                <h4>Asgaard sofa</h4>
-                                <p>1 X <span style="color: #e1d8cd;">Rs. 250,000.00</span></p>
-                            </div>
+                    <div class="row mt-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4">
                             <div>
-                                <i class="fa-solid fa-x mt-4"></i>
+                                <img width="100%" src="./images/Group 146 (2).png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-8">
+                            <div class="d-flex justify-content-between">
+                                <div class="mt-3">
+                                    <h4>Asgaard sofa</h4>
+                                    <p>1 X <span style="color: #e1d8cd;">Rs. 250,000.00</span></p>
+                                </div>
+                                <div>
+                                    <i class="fa-solid fa-x mt-4"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-4">
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div>
-                            <img width="100%" src="./images/Group 146 (2).png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-8">
-                        <div class="d-flex justify-content-between">
-                            <div class="mt-3">
-                                <h4>Asgaard sofa</h4>
-                                <p>1 X <span style="color: #e1d8cd;">Rs. 250,000.00</span></p>
-                            </div>
-                            <div>
-                                <i class="fa-solid fa-x mt-4"></i>
-                            </div>
-                        </div>
-                    </div>
+                <div class="d-flex justify-content-between mt-5">
+                    <h5>Subtotal</h5>
+                    <b style="color: #937226;">Rs. 520,000.00</p>
                 </div>
-            </div>
-            <div class="d-flex justify-content-between mt-5">
-                <h5>Subtotal</h5>
-                <b style="color: #937226;">Rs. 520,000.00</p>
-            </div>
-            <hr>
-            <div> 
-                <button class="btn btn-dark rounded-4">Cart</button>
-                <button class="btn btn-dark rounded-4">Checkout</button>
-                <button class="btn btn-dark rounded-4">Comparison</button>
+                <hr>
+                <div>
+                    <button class="btn btn-dark rounded-4">Cart</button>
+                    <button class="btn btn-dark rounded-4">Checkout</button>
+                    <button class="btn btn-dark rounded-4">Comparison</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 <script src="./contact.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-</html> 
+
+</html>
