long time code changeing

--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -117,9 +117,8 @@
                         <span>
                             <button id="decrease" class="btn mt-3" style="border: 1px solid black;">-</button>
                             <button id="plus1" class="btn mt-3" style="border: 1px solid black;">0</button>
-                            <button id="increase" class="btn mt-3" style="border: 1px solid black;">+</button>
+                            <button id="increase" class="btn mt-3" style="border: 1px solid black;">Add To Cart</button>
                         </span>
-                        <button class="btn mt-3" style="border: 1px solid black;">Add To Cart</button>
                         <button class="btn mt-3" style="border: 1px solid black;">+ Compare</button>
                     </div>
                 </div>
@@ -143,7 +142,7 @@
             </div>
         </div>
     </div>
-
+  
     <hr>
 
     <div class="d-flex gap-3 justify-content-center">
@@ -436,8 +435,10 @@
                 </div>
                 <hr>
                 <div>
-                    <button class="btn btn-dark rounded-4">Cart</button>
-                    <button class="btn btn-dark rounded-4">Checkout</button>
+                    <a href="http://127.0.0.1:5500/CART/cart.html"> <button
+                            class="btn btn-dark rounded-4">Cart</button></a>
+                    <a href="http://127.0.0.1:5500/Checkout/Checkout.html"> <button
+                            class="btn btn-dark rounded-4">Checkout</button></a>
                     <button class="btn btn-dark rounded-4">Comparison</button>
                 </div>
             </div>
